Change settings in second branch